Subida de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
 </head>
 
 <body>
+
+    <!--     <img src="http://localhost:3000/imagen/productos/5deafe826618f31e743edcc0-672.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1ZGQ1NGZhNjA5NTRhYTM0MThlNzZiMDQiLCJub21icmUiOiJUZXN0MSIsImVtYWlsIjoidGVzdDFAZ21haWwuY29tIiwiX192IjowfSwiaWF0IjoxNTc1ODUyODU2LCJleHAiOjE1NzYwMjU2NTZ9.xSvAGOEAY0lDbCuwVKoFLDhVUaSt8OHyYik8x4fVwd8">
+ -->
+
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <script>
         function onSignIn(googleUser) {
